<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">
    <androidx.preference.PreferenceCategory
        android:key="misc"
        android:title="@string/misc_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.SwitchPreferenceCompat
            android:layout="@layout/preference_item"
            android:defaultValue="false"
            android:key="force_linear"
            android:title="@string/force_linear_mode"
            android:summary="@string/force_linear_mode_summary" >
        </androidx.preference.SwitchPreferenceCompat>
        <androidx.preference.SwitchPreferenceCompat
            android:layout="@layout/preference_item"
            android:defaultValue="true"
            android:key="dolby_atmos"
            android:title="@string/dolby_atmos"
            android:summary="@string/dolby_atmos_summary" >
        </androidx.preference.SwitchPreferenceCompat>
<!--        <androidx.preference.CheckBoxPreference-->
<!--            android:layout="@layout/preference_item"-->
<!--            android:defaultValue="false"-->
<!--            android:key="reset_screen"-->
<!--            android:title="@string/reset_screen_title"-->
<!--            android:summary="@string/reset_screen_title_summary" >-->
<!--        </androidx.preference.CheckBoxPreference>-->
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:key="refresh_rate_policy"
        android:title="@string/refresh_rate_policy_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.MultiSelectListPreference
            android:layout="@layout/preference_item"
            android:key="60Hz_apps"
            android:defaultValue="@array/low_refresh_rate_apps_default_value"
            android:title="@string/force_60hz_apps"
            android:summary="@string/force_60hz_apps_summary">
        </androidx.preference.MultiSelectListPreference>
        <androidx.preference.MultiSelectListPreference
            android:layout="@layout/preference_item"
            android:key="90Hz_games"
            android:defaultValue="@array/use_90_refresh_rate_games_default_value"
            android:title="@string/use_90hz_games_policy_title"
            android:summary="@string/use_90hz_games_policy_summary">
        </androidx.preference.MultiSelectListPreference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/battery_info_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:key="batt_fcc"
            android:title="@string/batt_fcc"
            android:summary="N/A">
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:key="batt_cur"
            android:title="@string/batt_cur"
            android:summary="N/A">
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:key="batt_chg_speed"
            android:title="@string/batt_chg_speed"
            android:summary="N/A">
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/follow_me_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:title="@string/author"
            android:summary="Art_Chen">
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:title="@string/follow_me">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://weibo.com/imchenxy"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:title="@string/follow_me_bili">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://space.bilibili.com/7697432"/>
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>